--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <html>
   <head><title>Test page</title></head>
+  <body><h1 style="font-family:Helvetica;font-size:2em;text-align:center;">Test page</h1></body>
 </html>
