--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
   <head><title>Test page</title></head>
-  <body><h1 style="font-family:Helvetica;font-size:2em;text-align:center;color:#000;">Test page</h1></body>
+  <body style="margin-top:30px;"><h1 style="font-family:Helvetica;font-size:2em;text-align:center;color:#000;">Test page</h1></body>
 </html>
