--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head><title>Test page</title></head>
   <body style="margin-top:30px;">
-    <h1 style="font-family:Helvetica;font-size:2em;text-align:center;color:#000;">Test page</h1>
-    <h1 style="font-family:Helvetica;font-size:1em;text-align:center;color:#000;">This is a sample description.</h1>
+    <h1 style="font-family:Helvetica;font-size:2em;text-align:center;color:#000;">We're under maintenance</h1>
+    <h1 style="font-family:Helvetica;font-size:1em;text-align:center;color:#000;">We'll update this site soon.</h1>
   </body>
 </html>
