--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Coming Soon Pages</title>
+	<title>Marc Reyes - Coming soon!</title>
 
 	<!-- web-fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -24,8 +24,8 @@
   <body>
   	<section class="wraper">
   		<header class="header">
-  			<h1>PROXIMITY</h1>
-  			<h2>The best landing page you are looking for.</h2>
+  			<h1>MARC REYES</h1>
+  			<h2>We're working on things to make your experience better.</h2>
   		</header>
   		<!-- .header -->
 
@@ -71,8 +71,8 @@
   			</section><!-- /.social-links -->
 
   			<ul class="copyright">
-  				<li>&copy; Proximity. All rights reserved.</li>
-  				<li>Design By: <a href="http://uicookies.com">uiCookies</a></li>
+  				<li>&copy; Marc Reyes. All rights reserved.</li>
+  				<li>Like us on <a href="https://www.facebook.com/marcreyesph">Facebook</a></li>
   			</ul>
 
   		</footer>
