--- a/index.html
+++ b/index.html
@@ -1,100 +1,85 @@
 <!DOCTYPE html>
-<html>
+<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Marc Reyes - Coming soon!</title>
 
-	<!-- web-fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<!-- font-awesome -->
-	<link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	<!-- Style CSS -->
-	<link href="css/style.css" rel="stylesheet">
+   <!--- basic page needs
+   ================================================== -->
+   <meta charset="utf-8">
+	<title>Marc Reyes - Coming soon.</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-	<link rel="canonical" href=" { { site.url } }{ { page.url } }" />
-    	<script type="text/javascript">
-    	var host = "marcreyes.me";
-    	if ((host == window.location.host) && (window.location.protocol != "https:"))
-        window.location.protocol = "https";
-	</script>
-  </head>
-  <body>
-  	<section class="wraper">
-  		<header class="header">
-  			<h1>MARC REYES</h1>
-  			<h2>We're working on things to make your experience better.</h2>
-  		</header>
-  		<!-- .header -->
+   <!-- mobile specific metas
+   ================================================== -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+ 	<!-- CSS
+   ================================================== -->
+   <link rel="stylesheet" href="css/base.css">
+   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="css/vendor.css">
 
-  		<section class="countdown-wrapper">
-  			<ul id="back-countdiown">
-  				<li>                    
-  					<span class="days">00</span>
-  					<p>days</p>
-  				</li>
-  				<li>
-  					<span class="hours">00</span>
-  					<p>hours </p>
-  				</li>
-  				<li>
-  					<span class="minutes">00</span>
-  					<p>minutes</p>
-  				</li>
-  				<li>
-  					<span class="seconds">00</span>
-  					<p>seconds</p>
-  				</li>               
-  			</ul><!-- #back-countdiown -->
-  		</section><!-- .countdown-wrapper -->
+   <!-- script
+   ================================================== -->
+	<script src="js/modernizr.js"></script>
+	<script src="js/pace.min.js"></script>
 
-  		<section class="subscribe">
-  			<form class="subscribe-form" role="form" method="">
-  				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Address">
-  				<input type="submit" value="NOTIFY ME" class="form-control">
-  			</form>
-  		</section><!-- .subscribe-->
+   <!-- favicons
+	================================================== -->
+	<link rel="icon" type="image/png" href="favicon.png">
 
-  		<footer class="footer">
+</head>
 
-  			<section class="social-links">
-  				<ul>
-  					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-  					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-  					<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-  					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-  					<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-  				</ul>
-  			</section><!-- /.social-links -->
+<body id="top">
 
-  			<ul class="copyright">
-  				<li>&copy; Marc Reyes. All rights reserved.</li>
-  				<li>Like us on <a href="https://www.facebook.com/marcreyesph">Facebook</a></li>
-  			</ul>
+	<!-- header
+   ================================================== -->
+   <header>
+   	<div class="row">
 
-  		</footer>
-  	</section>
+   		</div> <!-- /top-bar -->
+
+   	</div> <!-- /row -->
+   </header> <!-- /header -->
+
+	<!-- intro section
+   ================================================== -->
+   <section id="intro">
+
+   	<div class="intro-overlay"></div>
+
+   	<div class="intro-content">
+   		<div class="row">
+
+   			<div class="col-twelve">
+
+	   			<h5>Hello, World.</h5>
+	   			<h1>I'm Marc Reyes.</h1>
+
+	   			<p class="intro-position">
+	   				<span>Graphic and Motion Graphic Artist</span>
+	   				<span>App Developer</span>
+            <span>Web Developer/Designer</span>
+	   			</p>
+
+	   			<a class="button stroke smoothscroll" href="#about" title="">More about me soon</a>
+
+	   		</div>
+
+   		</div>
+   	</div> <!-- /intro-content -->
+
+   </section> <!-- /intro -->
 
 
-  	<div class="fullscreen-bg">
-  		<video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
-  			<source src="img/video-bg.mp4" type="video/mp4">
-  		</video>
-  	</div> <!-- .fullscreen-bg -->
+   <!-- Java Script
+   ================================================== -->
+   <script src="js/jquery-2.1.3.min.js"></script>
+   <script src="js/plugins.js"></script>
+   <script src="js/main.js"></script>
 
-  	<!-- Script -->
-  	<script src="js/jquery-2.1.4.min.js"></script>
-  	<script src="js/coundown-timer.js"></script>
-  	<script src="js/scripts.js"></script>
+</body>
 
-  	</body>
 </html>
