--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
    <!-- favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="canonical" href=" { { site.url } }{ { page.url } }" />
+    	<script type="text/javascript">
+   	var host = "marcreyes.me";
+    	if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+	</script>
 
 </head>
 
