--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
 	     		<h2 class="h01"><a href="#">Need a graphic/motion graphic/web or app design?</a></h2>
 
 		      <p class="lead">
-		      Sure, I want to help you out. E-mail me by clicking the button below to start your business with me. Below are options of services you wish me to serve you.
+		      Sure, I want to help you out. As of the meantime, the contact form below is not yet working. Click the button below to fill up the service form. The information you entered will then be used when I'm making your project.
 				</p>
 
 				<div class="action">
