--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
 				</p>
 
 				<div class="action">
-			      <a class="button button-primary large smoothscroll" href="#contact">Let's Create</a>
+			      <a class="button button-primary large" href="http://po.st/mrserviceform" target="_new">Let's Create</a>
 		      </div>
 
    		</div>
