--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Society for Technology in Education in the Philippines (STEP 2015)</h4>
-	   					<p>I was tasked to make the graphic designs and motion graphics for their promotional materials, kits, tarpaulins, billboards and other paraphernalia. This was my first biggest project as a student and as an artist.</p>
+	   					<p>I was tasked to make some of the graphic designs and motion graphics for their promotions. This was my first biggest project as a student and as an artist.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
