target_new for links

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
    	<div class="row">
    		<div class="logo">
-	         <a href="index.html">Khronos</a>
+	         <a href="index.html">Marc X</a>
 	      </div>
 
 			<div class="social-links">
 			   <ul>
-					<li><a href="https://www.facebook.com/marcreyesph"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://www.twitter.com/marcreyesph"><i class="fa fa-twitter"></i></a></li>
-				   <li><a href="https://www.instagram.com/marcxph"><i class="fa fa-instagram"></i></a></li>
+					<li><a target="_new" href="https://www.facebook.com/marcreyesph"><i class="fa fa-facebook"></i></a></li>
+					<li><a target="_new" href="https://www.twitter.com/marcreyesph"><i class="fa fa-twitter"></i></a></li>
+				   <li><a target="_new" href="https://www.instagram.com/marcxph"><i class="fa fa-instagram"></i></a></li>
 				</ul>
 			</div>
    	</div>
@@ -370,7 +370,7 @@
 
    		<div class="col-twelve cta-content">
 
-	     		<h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Need a graphic/motion graphic/web or app design?</a></h2>
+	     		<h2 class="h01"><a href="#">Need a graphic/motion graphic/web or app design?</a></h2>
 
 		      <p class="lead">
 		    Sure, I want to help you out. <span>Click the button</span> below to start your business with me. Below are options of services you wish me to serve you.
@@ -378,7 +378,7 @@
 				</p>
 
 				<div class="action">
-			      <a class="button large" href="http://po.st/mrserviceform">Book your request</a>
+			      <a target="_new" class="button large" href="http://po.st/mrserviceform">Book your request</a>
 		      </div>
 
    		</div>
@@ -396,13 +396,13 @@
    		<div class="row">
 
 	         <ul class="footer-social-list">
-	            <li><a href="https://www.facebok.com/marcreyesph">
+	            <li><a target="_new" href="https://www.facebok.com/marcreyesph">
 	             	<i class="fa fa-facebook"></i><span>Facebook</span>
 	            </a></li>
-	            <li><a href="https://www.twitter.com/marcreyesph">
+	            <li><a target="_new" href="https://www.twitter.com/marcreyesph">
 	              	<i class="fa fa-twitter"></i><span>Twitter</span>
 	            </a></li>
-	            <li><a href="https://www.instagram.com/marcxph">
+	            <li><a target="_new" href="https://www.instagram.com/marcxph">
 	              	<i class="fa fa-instagram"></i><span>Instagram</span>
 	            </a></li>
 	         </ul>
