--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
 			</div>
 
    		<div class="copyright">
-		     	<span>&copy; 2016 Marc Reyes</span>
-		     	<span>All rights reserved</span>
+		     	<span>&copy; 2016 Marc Reyes | All rights reserved</span>
+			<span>Powered by <a target="_new" href="https://pages.github.com/">GitHub pages</a></span>
 		   </div>
 
    	</div> <!-- /footer-bottom -->
