--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Marc Reyes - Let's Celebrate The New Year!</title>
+	<title>Marc Reyes - Let's celebrate the new year.</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
   
