--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 		   			<div id="counter">
 		   				<span style="font-size:270px;margin-bottom:-30px;">#</span>
               <span class="count" style="font-size:270px;margin-bottom:-30px;color:#212121;letter-spacing:-20px;">2017</span>
+						<script type="text/css">
+						$('.count').each(function () {
+		    $(this).prop('Counter',0).animate({
+		        Counter: $(this).text()
+		    }, {
+		        duration: 2500,
+		        easing: 'swing',
+		        step: function (now) {
+		            $(this).text(Math.ceil(now));
+		        }
+		    });
+		});
+						</script>
             	</div>
 
 			  			<div class="bottom-text">
