Updated home link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
    	<div class="row">
    		<div class="logo">
-	         <a href="index.html">Khronos</a>
+	         <a href="index.html">Marc X</a>
 	      </div>
 
 			<div class="social-links">
