Updated meta description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Marc Reyes - Let's welcome 2017!</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Marc X is a creative startup by Marc Reyes.">
+	<meta name="author" content="Marc Reyes">
 
   <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
     <script type="text/javascript">
