--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 			<div class="social-links">
 			   <ul>
-					<li><a href="https://www.facebook.com/marcreyesph"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://www.twitter.com/marcreyesph"><i class="fa fa-twitter"></i></a></li>
-				   <li><a href="https://www.instagram.com/marcxph"><i class="fa fa-instagram"></i></a></li>
+					<li><a target="_new" href="https://www.facebook.com/marcreyesph"><i class="fa fa-facebook"></i></a></li>
+					<li><a target="_new" href="https://www.twitter.com/marcreyesph"><i class="fa fa-twitter"></i></a></li>
+				   <li><a target="_new" href="https://www.instagram.com/marcxph"><i class="fa fa-instagram"></i></a></li>
 				</ul>
 			</div>
    	</div>
