Updated link targets

--- a/index.html
+++ b/index.html
@@ -403,13 +403,13 @@
    		<div class="row">
 
 	         <ul class="footer-social-list">
-	            <li><a href="https://www.facebok.com/marcreyesph">
+	            <li><a target="_new" href="https://www.facebok.com/marcreyesph">
 	             	<i class="fa fa-facebook"></i><span>Facebook</span>
 	            </a></li>
-	            <li><a href="https://www.twitter.com/marcreyesph">
+	            <li><a target="_new" href="https://www.twitter.com/marcreyesph">
 	              	<i class="fa fa-twitter"></i><span>Twitter</span>
 	            </a></li>
-	            <li><a href="https://www.instagram.com/marcxph">
+	            <li><a target="_new" href="https://www.instagram.com/marcxph">
 	              	<i class="fa fa-instagram"></i><span>Instagram</span>
 	            </a></li>
 	         </ul>
