--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-
-   <!--- basic page needs
-   ================================================== -->
-   <meta charset="utf-8">
+  <meta charset="utf-8">
 	<title>Marc Reyes - Let's welcome 2017!</title>
 	<meta name="description" content="Marc X is a creative startup by Marc Reyes.">
 	<meta name="author" content="Marc Reyes">
@@ -18,31 +15,21 @@
         window.location.protocol = "https";
     </script>
 
-   <!-- mobile specific metas
-   ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
- 	<!-- CSS
-   ================================================== -->
    <link rel="stylesheet" href="css/base.css">
    <link rel="stylesheet" href="css/main.css">
    <link rel="stylesheet" href="css/vendor.css">
 
-   <!-- script
-   ================================================== -->
-	<script src="js/modernizr.js"></script>
+  <script src="js/modernizr.js"></script>
 
-   <!-- favicons
-	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 
 </head>
 
 <body id="top">
 
-	<!-- header
-   ================================================== -->
-   <header>
+	 <header>
 
    	<div class="row">
    		<div class="logo">
@@ -58,10 +45,8 @@
 			</div>
    	</div>
 
-   </header> <!-- /header -->
+   </header>
 
-   <!-- home
-   ================================================== -->
    <section id="home" class="home-particles">
 
    	<div class="shadow-overlay"></div>
@@ -108,18 +93,15 @@
 					   </a>
 				   	<div class="end-top"></div>
 
-					</div> <!-- /scroll-icon -->
-		   	</div> <!-- /row -->
+					</div>
+		   	</div>
 
-		   </div> <!-- /main-content -->
+		   </div>
 
-		</div> <!-- /content-wrap -->
+		</div>
 
-   </section> <!-- /home -->
+   </section>
 
-
-   <!-- info
-   ================================================== -->
    <section id="info">
 
    	<div class="info-overlay"></div>
@@ -131,12 +113,10 @@
    				<li class="active" data-id="tab-about"><i class="icon-user"></i><span>About Me</span></li>
    				<li data-id="tab-contact"><i class="icon-mail"></i><span>Contact</span></li>
 					<li data-id="tab-subscribe"><i class="icon-newspaper"></i><span>Subscribe</span></li>
-				</ul> <!-- /tabs -->
+				</ul>
 
 				<div class="tab-container">
 
-					<!-- tab content - about
-   				================================================== -->
 					<div id="tab-about" class="tab-content">
 
 					   <div class="tab-entry">
@@ -149,7 +129,7 @@
 					   			<p class="lead">I am a student majoring in Computer Science. I love coding a lot and programming is my passion. I'm a graphic artist for almost five (5) years and a motion graphic artist for three (3) years. I started developing and designing for web when I was second year high school. Until now, I'm still doing it.</p>
 
 					   		</div>
-					   	</div> <!-- /tab-content-intro -->
+					   	</div>
 
 					   	<div class="row about-content tab-entry-content">
 
@@ -168,7 +148,7 @@
 
 						         	</div>
 
-									</div> <!-- /bgrid -->
+									</div>
 
 									<div class="bgrid item">
 
@@ -184,7 +164,7 @@
 
 						            </div>
 
-								   </div> <!-- /bgrid -->
+								   </div>
 
 								   <div class="bgrid item">
 
@@ -199,7 +179,7 @@
 
 						            </div>
 
-								   </div> <!-- /bgrid -->
+								   </div>
 
 									<div class="bgrid item">
 
@@ -214,7 +194,7 @@
 
 						            </div>
 
-									</div> <!-- /bgrid -->
+									</div>
 
 								   <div class="bgrid item">
 
@@ -229,7 +209,7 @@
 
 						            </div>
 
-								   </div> <!-- /bgrid -->
+								   </div>
 
 								   <div class="bgrid item">
 
@@ -243,20 +223,17 @@
 
 						            </div>
 
-								   </div> <!-- /bgrid -->
+								   </div>
 
-						      </div> <!-- /about-list -->
+						      </div>
 
-					     	</div> <!-- /row about-content -->
+					     	</div>
 
-					   </div> <!-- /tab-entry -->
+					   </div>
 
-					</div> <!-- /tab-about -->
+					</div>
 
-
-					<!-- tab content contact
-   				================================================== -->
-					<div id="tab-contact" class="tab-content">
+          <div id="tab-contact" class="tab-content">
 
 						<div class="tab-entry">
 
@@ -268,12 +245,11 @@
 					   			<p class="lead">Send me an e-mail if you want me to serve you. Make sure to complete the necessary fields below so that I'll be able to reach you. Thank you for visiting my website!</p>
 
 					   		</div>
-					   	</div> <!-- /tab-content-intro -->
+					   	</div>
 
 					   	<div class="row form-wrap tab-entry-content">
 					   		<div class="col-twelve">
 
-					            <!-- form -->
 					            <form name="contactForm" id="contactForm" method="post" action="">
 					      			<fieldset>
 
@@ -299,30 +275,26 @@
 													  	<div class="bounce2"></div>
 													  	<div class="bounce3"></div>
 													</div>
-												</div><!-- submit-loader -->
+												</div>
 					                  </div>
 
 					      			</fieldset>
-					      		</form> <!-- /form -->
+					      		</form>
 
-					            <!-- contact-warning -->
 					            <div id="message-warning">
 					            </div>
-					            <!-- contact-success -->
+
 					      		<div id="message-success">
 					               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
 					      		</div>
 
-					         </div> <!-- /col-twelve -->
-					   	</div> <!-- /row contact-form -->
+					         </div>
+					   	</div>
 
-						</div> <!-- /tab-entry -->
+						</div>
 
-					</div> <!-- /tab-contact -->
+					</div>
 
-
-					<!-- tab content - subscribe
-   				================================================== -->
 					<div id="tab-subscribe" class="tab-content">
 
 						<div class="tab-entry">
@@ -335,7 +307,7 @@
 					   			<p class="lead">Subscribe with your e-mail address now. However, this feature is not working as of the moment.</p>
 
 					   		</div>
-					   	</div> <!-- /tab-content-intro -->
+					   	</div>
 
 					   	<div class="row form-wrap tab-entry-content">
 					   		<div class="col-twelve">
@@ -354,34 +326,30 @@
 
 									</form>
 
-					   		</div> <!-- /twelve -->
-					   	</div> <!-- subscribe-form -->
+					   		</div>
+					   	</div>
 
-						</div> <!-- /tab-entry -->
+						</div>
 
-					</div> <!-- /tab-subscribe -->
+					</div>
 
-				</div> <!-- /tab-container -->
+				</div>
 
-   		</div> <!-- twelve -->
-   	</div> <!-- row -->
+   		</div>
+   	</div>
 
-   </section> <!-- /info -->
+   </section>
 
-
-   <!-- CTA Section
-   ================================================== -->
 	<section id="cta">
 
    	<div class="row cta-wrap">
 
    		<div class="col-twelve cta-content">
 
-	     		<h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Need a graphic/motion graphic/web or app design?</a></h2>
+	     		<h2 class="h01"><a target="_new" href="http://po.st/mrserviceform">Need a graphic/motion graphic/web or app design?</a></h2>
 
 		      <p class="lead">
 		    Sure, I want to help you out. <span>Click the button</span> below to start your business with me. Below are options of services you wish me to serve you.
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
 				</p>
 
 				<div class="action">
@@ -390,13 +358,10 @@
 
    		</div>
 
-   	</div> <!-- /cta-content -->
+   	</div>
 
-   </section> <!-- /cta -->
+   </section>
 
-
-   <!-- footer
-   ================================================== -->
    <footer>
 
    	<div class="social-wrap">
@@ -414,8 +379,8 @@
 	            </a></li>
 	         </ul>
 
-			</div> <!-- /row -->
-   	</div> <!-- /social-wrap -->
+			</div>
+   	</div>
 
    	<div class="footer-bottom">
 
@@ -428,7 +393,7 @@
 		     	<span>All rights reserved</span>
 		   </div>
 
-   	</div> <!-- /footer-bottom -->
+   	</div>
 
    	<div class="back-to-top">
 		 	<a href="#top" class="smoothscroll"><span>Back to Top</span></a>
@@ -440,8 +405,6 @@
     	<div id="loader"></div>
    </div>
 
-   <!-- Java Script
-   ================================================== -->
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>
