Social links updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			   <ul>
 					<li><a target="_new" href="https://www.facebook.com/marcreyesph"><i class="fa fa-facebook"></i></a></li>
 					<li><a target="_new" href="https://www.twitter.com/marcreyesph"><i class="fa fa-twitter"></i></a></li>
-				   <li><a target="_new" href="https://www.instagram.com/marcxph"><i class="fa fa-instagram"></i></a></li>
+           <li><a target="_new" href="https://www.github.com/marcreyesph"><i class="fa fa-github"></i></a></li>
 				</ul>
 			</div>
    	</div>
@@ -374,8 +374,8 @@
 	            <li><a target="_new" href="https://www.twitter.com/marcreyesph">
 	              	<i class="fa fa-twitter"></i><span>Twitter</span>
 	            </a></li>
-	            <li><a target="_new" href="https://www.instagram.com/marcxph">
-	              	<i class="fa fa-instagram"></i><span>Instagram</span>
+              <li><a target="_new" href="https://www.github.com/marcreyesph">
+	              	<i class="fa fa-github"></i><span>GitHub</span>
 	            </a></li>
 	         </ul>
 
