Footer credit updated

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
    		<div class="copyright">
 		     	<span>&copy; 2016 Marc Reyes</span>
-		     	<span>All rights reserved</span>
+		     	<span>Powered by <a target="_new" href="https://pages.github.com">GitHub pages</a></span>
 		   </div>
 
    	</div>
