--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Welcome to Marc Reyes - Let's welcome 2017!</title>
 	<meta name="description" content="Marc X is a creative startup by Marc Reyes.">
 	<meta name="author" content="Marc Reyes">
+  <meta name="email" content="marcreyesmedia@gmail.com">
 
   <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
     <script type="text/javascript">
