SSL config in new design updated

--- a/new-design/index.html
+++ b/new-design/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>Marc Reyes - Test page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="buckymaler.com">
   <link rel="stylesheet" href="assets/css/main.css">
+
+  <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
+    <script type="text/javascript">
+    var host = "marcreyes.me";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+    </script>
+
 </head>
 <body>
 
