--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-	<title>Marc Reyes - Let's welcome 2017!</title>
+	<title>Welcome to Marc Reyes - Let's welcome 2017!</title>
 	<meta name="description" content="Marc X is a creative startup by Marc Reyes.">
 	<meta name="author" content="Marc Reyes">
   <meta name="email" content="marcreyesmedia@gmail.com">
