Sample title updated

--- a/new-design/index.html
+++ b/new-design/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marc Reyes - Test page</title>
+  <title>Welcome to Marc Reyes - Test page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -274,7 +274,7 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Hire me</li>
   </ul>
 </div>
 
