Alt in logo updated

--- a/new-design/index.html
+++ b/new-design/index.html
@@ -21,7 +21,7 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
+    <img src="assets/img/logo.png" alt="Marc X">
     <p>Marc X</p>
   </a>
   <p class="device-notification--message">Marc X has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
@@ -33,8 +33,8 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Global">
-            <p>Global</p>
+            <img src="assets/img/logo.png" alt="Marc X">
+            <p>Marc X</p>
           </a>
           <button class="header--cta cta">Hire Us</button>
           <div class="header--nav-toggle">
