--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,7 @@
             <img src="assets/img/logo.png" alt="Marc X">
             <p>Marc X</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <button class="header--cta cta">Hire Me</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -47,15 +47,15 @@
             <li><span>Works</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Hire Me</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Welcome to<br>Marc Reyes<br>design site.</h1>
-                <button class="cta">Hire Us
+                <h1>Your ideas<br>made<br>creative.</h1>
+                <button class="cta">Hire Me
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -67,16 +67,16 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Graphic &amp; MoGraph Design</h3>
+                  <p>Turn your simple ideas into creative graphic and MoGraph projects</p>
                 </a>
                 <a href="#0">
-                  <h3>Fantasy interactive</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Web Dev + Design</h3>
+                  <p>Affordable web dev + design for your website needs</p>
                 </a>
                 <a href="#0">
-                  <h3>Paul &amp; shark</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>UI/UX Design</h3>
+                  <p>Impactful and interactive UI/UX for your applications</p>
                 </a>
               </div>
             </div>
