--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="buckymaler.com">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
   <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
     <script type="text/javascript">
