Fixed missing links

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                     <a href="tel:+148126287560">+639 129 152 323</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Facebook</a></li>
-                    <li><a href="#0">GitHub</a></li>
+                    <li><a href="https://www.facebook.com/marcreyesph" target="_new">Facebook</a></li>
+                    <li><a href="https://github.com/marcreyesph" target="_new">GitHub</a></li>
                     <li><a href="http://po.st/mrserviceform">Book Request</a></li>
                   </ul>
                 </div>
