E-mail config fixed

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="hire">
               <h2>What do you want me to do?</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request">
+              <form class="work-request" action="http://formspree.io/marcreyesmedia@gmail.com" method="POST">
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
