--- a/404.html
+++ b/404.html
@@ -208,7 +208,7 @@ document.oncontextmenu = click;
     </p>
 	</div>
 	<div class="buttons-container">
-		<a class="border-button" href="https://www.marcreyes." target="_blank">Go To Homepage</a>
+		<a class="border-button" href="https://www.marcreyes.me" target="_blank">Go To Homepage</a>
 		<a class="border-button" href="mailto:contact@marcreyes.me" target="_blank">Report A Problem</a>
 	</div>
 </div>
