--- a/404.html
+++ b/404.html
@@ -192,7 +192,7 @@ document.oncontextmenu = click;
   <body class="plain error-page-wrapper background-color background-image">
     <div class="content-container">
 	<div class="head-line secondary-text-color">
-		<img src="assets/img/error-logo.png" style="margin-bottom:20px;" width="190"/>
+		<a href="https://www.marcreyes.me"><img src="assets/img/error-logo.png" style="margin-bottom:20px;" width="190"/></a>
 	</div>
 	<div class="subheader primary-text-color">
 		Oops, the page you're <br>
@@ -208,8 +208,7 @@ document.oncontextmenu = click;
     </p>
 	</div>
 	<div class="buttons-container">
-		<a class="border-button" href="https://www.marcreyes.me" target="_blank">Go To Homepage</a>
-		<a class="border-button" href="mailto:contact@marcreyes.me" target="_blank">Report A Problem</a>
+		<a class="border-button" href="https://www.marcreyes.me">Go To Homepage</a>
 	</div>
 </div>
 
