--- a/503.html
+++ b/503.html
@@ -191,7 +191,7 @@ document.oncontextmenu = click;
   <body class="plain error-page-wrapper background-color background-image">
     <div class="content-container">
 	<div class="head-line secondary-text-color">
-		<img src="assets/img/error-logo.png" style="margin-bottom:20px;" width="190"/>
+		<a href="https://www.marcreyes.me"><img src="assets/img/error-logo.png" style="margin-bottom:20px;" width="190"/></a>
 	</div>
 	<div class="subheader primary-text-color">
 		Looks like we're having <br>
@@ -206,8 +206,7 @@ document.oncontextmenu = click;
 
     </div>
 	<div class="buttons-container">
-		  <a class="border-button" href="https://about.marcreyes.me" target="_blank">View Status Page</a>
-		<a class="border-button" href="mailto:contact@marcreyes.me" target="_blank">Report A Problem</a>
+		<a class="border-button" href="mailto:marcreyesmedia@gmail.com" target="_blank">Report A Problem</a>
 	</div>
 </div>
 
