Fixed image src

--- a/503.html
+++ b/503.html
@@ -191,7 +191,7 @@ document.oncontextmenu = click;
   <body class="plain error-page-wrapper background-color background-image">
     <div class="content-container">
 	<div class="head-line secondary-text-color">
-		<a href="https://www.marcreyes.me"><img src="assets/img/error-logo.png" style="margin-bottom:20px;" width="190"/></a>
+		<a href="https://www.marcreyes.me"><img src="https://marcreyes.me/assets/img/error-logo.png" style="margin-bottom:20px;" width="190"/></a>
 	</div>
 	<div class="subheader primary-text-color">
 		Looks like we're having <br>
