Updated device notif

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img src="assets/img/logo.png" alt="Marc X">
     <p>Marc X</p>
   </a>
-  <p class="device-notification--message">Marc X has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">Please orient your device to portrait or find a larger screen.</p>
 </div>
 
 <div class="perspective effect-rotate-left">
