--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <title>Marc Reyes - Page does not exist.</title>
+  <title>Page does not exist | Marc Reyes</title>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" media="screen" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" media="screen" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="http://marcreyes.me/assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
     <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
       <script type="text/javascript">
@@ -192,7 +192,7 @@ document.oncontextmenu = click;
   <body class="plain error-page-wrapper background-color background-image">
     <div class="content-container">
 	<div class="head-line secondary-text-color">
-		<a href="https://www.marcreyes.me"><img src="https://marcreyes.me/assets/img/error-logo.png" style="margin-bottom:20px;" width="190"/></a>
+		<a href="https://www.marcreyes.me"><img src="https://marcreyes.meassets/img/error-logo.png" style="margin-bottom:20px;" width="190"/></a>
 	</div>
 	<div class="subheader primary-text-color">
 		Oops, the page you're <br>
