Updated meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Marc X">
+  <meta name="description" content="Marc X is a dev + design start-up by Marc Reyes. Started in 2013, the start-up aims to provide cheaper web development and design alternatives for students and professionals.">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
