Updated fix prompt message on form

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <li class="l-section section">
             <div class="hire">
               <h2>What do you want me to do?</h2>
-              <p style="font-size:1.5em;text-align:center;">We're currently experiencing a server issue as of the moment. We request to fill up this form now. <br> <br><a class="link_prompt_error" target="_new" href="http://po.st/mrserviceform">Fill up form</a></p>
+              <p style="font-size:1.5em;text-align:center;">We're currently experiencing a server issue as of the moment. For service requests, we request to fill up this form now.<br> <br><a class="link_prompt_error" target="_new" href="http://po.st/mrserviceform">Fill up form</a><br><br><span style="font-size:13px;"><span style="color:#0f33ff;font-size:1.5em;">* </span>You will be redirected to Google Forms</span></p>
               <!-- checkout formspree.io for easy form setup --> <!--
               <form class="work-request" action="https://formspree.io/marcreyesmedia@gmail.com" method="POST">
                 <div class="work-request--options">
